--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,13 +42,13 @@ jobs:
         
     # Run build of the application
     - name: Run build
-      run: go build . 
+      run: go build ./... 
       
     # Run vet & lint on the code
     - name: Run vet & lint
       run: |
-        go vet .
-        golint .
+        go vet ./...
+        golint ./...
 
     # Run testing on the code
     - name: Run testing
