--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,30 +16,19 @@ jobs:
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
       with:
-        go-version: ^1.15
+        go-version: ^1.19
 
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
-
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: make test/unit
 
     - name: Run vet & lint
-      run: |
-        go vet ./...
-        go get -u golang.org/x/lint/golint
-        golint ./...  
+      run: make test/lint
 
     - name: Calc coverage
       run: |
