--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,7 +20,6 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            name/app
             airenas/audio-len
           # generate Docker tags based on the following events/attributes
           tags: |
@@ -38,7 +37,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
       -
         name: Login to Docker Hub
-        if: github.event_name != 'pull_request' && github.ref != 'main'
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -50,6 +49,6 @@ jobs:
         with:
           context: .
           file: ./build/Dockerfile
-          push: ${{ github.event_name != 'pull_request' && github.ref != 'main' }}
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
