--- a/examples/docker-compose/docker-compose.yml
+++ b/examples/docker-compose/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   audio-len:
-    image: airenas/audio-len-service:${VERSION}
+    image: airenas/audio-len:${VERSION}
     ports:
       - "${PORT}:8000"
     # restart: unless-stopped
