--- a/examples/docker-compose/Makefile
+++ b/examples/docker-compose/Makefile
@@ -4,7 +4,7 @@ start:
 	docker compose up -d
 
 stop:
-	docker compose stop && docker-compose rm -f
+	docker compose down
 
 test:
 	curl -X POST http://localhost:$(PORT)/duration -H 'content-type: multipart/form-data' -F file=@1.mp3
